Fix overflow horizontal scrolling

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -16,8 +16,8 @@
 }
 
 body {
-    overflow-x: hidden;
     max-width: 100vw;
+    overflow-x: clip;
 }
 
 /* Header */
